[package]
name = "toy_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
digest = "0.10.1"
generic-array = "0.14.5"
sha3 = "0.10.0"
